// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalculatorStepper component calls button events 1`] = `
Array [
  Array [
    Class {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "altKey": null,
      "bubbles": null,
      "button": null,
      "buttons": null,
      "cancelable": null,
      "clientX": null,
      "clientY": null,
      "ctrlKey": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "detail": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "metaKey": null,
      "movementX": [Function],
      "movementY": [Function],
      "nativeEvent": null,
      "pageX": null,
      "pageY": null,
      "relatedTarget": [Function],
      "screenX": null,
      "screenY": null,
      "shiftKey": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
      "view": null,
    },
  ],
]
`;

exports[`CalculatorStepper component calls button events 2`] = `
Array [
  Array [
    Class {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "altKey": null,
      "bubbles": null,
      "button": null,
      "buttons": null,
      "cancelable": null,
      "clientX": null,
      "clientY": null,
      "ctrlKey": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "detail": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "metaKey": null,
      "movementX": [Function],
      "movementY": [Function],
      "nativeEvent": null,
      "pageX": null,
      "pageY": null,
      "relatedTarget": [Function],
      "screenX": null,
      "screenY": null,
      "shiftKey": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
      "view": null,
    },
  ],
]
`;

exports[`CalculatorStepper component calls button events 3`] = `
Array [
  Array [
    SyntheticEvent {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "bubbles": null,
      "cancelable": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "nativeEvent": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`CalculatorStepper component ignores footer when there are no buttons 1`] = `
<div>
  <div
    class="CalculatorStepper"
  >
    <form
      class="Form-root-67"
    >
      <h4
        class="MuiTypography-root step-title Typography-root-72 MuiTypography-h4"
        data-testid="typography"
      >
        This is the 2nd page
      </h4>
      <h6
        class="MuiTypography-root computation Typography-root-72 MuiTypography-h6"
        data-testid="typography"
      />
      <p
        class="MuiTypography-root subtitle Typography-root-72 MuiTypography-body1"
        data-testid="typography"
      >
        Choose the closest to your roof shape
      </p>
      <div
        class="content"
      >
        <div>
          <p>
            This is the Selecting a Roof Shape page.
          </p>
        </div>
      </div>
      <hr
        class="MuiDivider-root hr"
      />
    </form>
  </div>
</div>
`;

exports[`CalculatorStepper component renders as a div 1`] = `
<div>
  <div
    class="CalculatorStepper"
  >
    <div>
      <h4
        class="MuiTypography-root step-title Typography-root-34 MuiTypography-h4"
        data-testid="typography"
      >
        This is the 2nd page
      </h4>
      <h6
        class="MuiTypography-root computation Typography-root-34 MuiTypography-h6"
        data-testid="typography"
      />
      <p
        class="MuiTypography-root subtitle Typography-root-34 MuiTypography-body1"
        data-testid="typography"
      >
        Choose the closest to your roof shape
      </p>
      <div
        class="content"
      >
        <div>
          <p>
            This is the Selecting a Roof Shape page.
          </p>
        </div>
      </div>
      <hr
        class="MuiDivider-root hr"
      />
      <div
        class="footer breakableRow breakableRow--reverse"
      >
        <div
          class="breakableRow"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-42 MuiButton-outlined rowItem MuiButton-outlinedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-45"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-46 MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
              </span>
              Go Back
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="breakableRow"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-42 MuiButton-text Button-text-43 rowItem MuiButton-textPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-45"
            >
              Skip
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-42 MuiButton-contained Button-contained-44 rowItem MuiButton-containedPrimary"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label Button-label-45"
            >
              Calculate
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CalculatorStepper component renders correctly 1`] = `
<div>
  <div
    class="CalculatorStepper"
  >
    <form
      class="Form-root-1"
    >
      <h4
        class="MuiTypography-root step-title Typography-root-6 MuiTypography-h4"
        data-testid="typography"
      >
        This is the 2nd page
      </h4>
      <h6
        class="MuiTypography-root computation Typography-root-6 MuiTypography-h6"
        data-testid="typography"
      />
      <p
        class="MuiTypography-root subtitle Typography-root-6 MuiTypography-body1"
        data-testid="typography"
      >
        Choose the closest to your roof shape
      </p>
      <div
        class="content"
      >
        <div>
          <p>
            This is the Selecting a Roof Shape page.
          </p>
        </div>
      </div>
      <hr
        class="MuiDivider-root hr"
      />
      <div
        class="footer breakableRow breakableRow--reverse"
      >
        <div
          class="breakableRow"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-14 MuiButton-outlined rowItem MuiButton-outlinedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-17"
            >
              <span
                class="MuiButton-startIcon Button-startIcon-18 MuiButton-iconSizeMedium"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                  />
                </svg>
              </span>
              Go Back
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="breakableRow"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-14 MuiButton-text Button-text-15 rowItem MuiButton-textPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-17"
            >
              Skip
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-14 MuiButton-contained Button-contained-16 rowItem MuiButton-containedPrimary"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label Button-label-17"
            >
              Calculate
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
